@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.32
+# Note: this file was auto-generated by Module::Build::Compat version 0.31012
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -11,7 +11,7 @@ WriteMakefile
                            'POSIX' => 0,
                            'autodie' => 0,
                            'File::Spec' => 0,
-                           'Bot::BasicBot::Pluggable' => '0.60'
+                           'Bot::BasicBot::Pluggable' => '0.77'
                          }
         )
 ;
